# pubmed-author-finder

./: .dockerignore  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
backend/: Dockerfile
backend/web/: settings.py
frontend/: Dockerfile
frontend/src/: api.ts
frontend/src/pages/: Register.tsx
nginx/: nginx.conf
nginx/conf.d/: default.conf
src/: webapp.py  wsgi.py
src/static/: app.js  styles.css
src/templates/: index.html
tests/: test_webapp.py
