[project]
name = "pubmed-author-finder"
version = "0.1.0"
description = "Find published researchers on pubmed"

authors = [{name="Nitahi Escolar Bach", email="nitahieb@gmail.com"}]
requires-python = ">=3.10"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
entrezpy = "*"
lxml = "*"
pytest = "^8.0"
uniqpath = "^0.1.3"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.per-file-ignores]
"src/format.py" = ["W291"]
"tests/*" = ["W293", "E501"]

[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"
